src/css/feature-sections/info.scss
@import "../mixins.scss";

.overlay {
    background-image: url("../../assets/pasta-background.svg");
    background-repeat: no-repeat;
    background-size: cover;
}

.info {
    padding-bottom: 0px;
    color: var(--text-color-white);

    &__title {
        text-align: center;
        margin-bottom: 35px;

        h1 {
            margin-top: 20px;
            margin-bottom: 20px;
        }

        span {
            text-transform: uppercase;
        }

        span,
        p {
            opacity: 0.8;
        }
    }

    &__cards {
        @include position();
        gap: 20px;
        margin-bottom: 20px;
    }

    &__item {
        display: flex;
        align-items: top;

        i {
            font-size: 20px;
            margin-top: 5px;

            &.icon-book {
                color: var(--action-color-primary);
            }

            &.icon-youtube {
                color: #ea3223;
            }
        }

        &-title {
            padding: 5px;
        }
    }
}

@media (min-width: 992px) {
    .info {
        &__title {
            margin-bottom: 70px;

            h1 {
                font-size: 42px;
                line-height: 52px;
            }

            p {
                margin-top: 10px;
            }
        }

        &__cards {
            flex-direction: row;
            gap: initial;
            justify-content: space-around;
            width: 100%;
            margin-bottom: 80px;
        }

        &__item {
            max-width: 405px;

            i {
                font-size: 25px;
                margin: 0px;
            }
        }
    }
}

